--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#padrao">O que isso</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#atividades">Atividades</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Fotos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshop">Workshop</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizadores">Organizadores</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +40,7 @@
             </div>
         </header>
         <!--o que é isso? -->
-        <section class="page-section">
+        <section class="page-section" id ="padrao">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">O que isso?</h2>
