Modelo de Layout 1 (Organizadores) - Sobre o PET

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#atividades">Atividades</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Fotos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshop">Workshop</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizadores">Organizadores</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizadores">Sobre o PET</a></li>
                     </ul>
                 </div>
             </div>
@@ -195,42 +195,25 @@
                 </ul>
             </div>
         </section>
-        <!-- Organizadores-->
+        <!-- Sobre o PET-->
         <section class="page-section bg-light" id="organizadores">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">organizadores</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Sobre o PET</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="" />
-                            <h4>engenharia da computação</h4>
-                            <p class="text-muted">Algum comentário</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+                    <div class="col-lg-3">
+                        <img class="rounded float-left" src="img/logos/PET.png" alt="" />
                     </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="" />
-                            <h4>Ciência da  computação</h4>
-                            <p class="text-muted">Algum comentario</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="" />
-                            <h4>Engenharia de Telecomunicações</h4>
-                            <p class="text-muted">algum comentario</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+                    <div class="col-lg-9">
+                        <h3 class="section-subheading text-muted">O PET Computação UFC foi fundado em Agosto de 1992 pelo Professor Riverson, sendo o primeiro tutor (1992-1996), seguido do Professor Tarcísio (1996-1997), o Professor Marcelino Pequeno (1997-2016) e depois pelo professor Lincoln Rocha (2016- atualmente).<br>
+                        Através de nosso projetos de Ensino, Pesquisa e Extensão, temos como objetivo de expandir o conhecimento, dentro e fora da nossa Universidade, sobre as diversas áreas do curso de Ciências da Computação.<br>
+                        Temos como exemplo os diversos grupos de estudos dentro do nosso curso, como o GELSOL, GEMP, DOG, MOBi e TALK. Também temos eventos como a Olimpíada Cearense de Informática e a Semana Academica da Computação, além de muitos outros, todos estes organizados pelo PET.
+                        </h3>
+                        
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                </div>
+
             </div>
         </section>
         <!-- Footer-->
