--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&family=Poiret+One&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <style>
@@ -60,7 +62,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-md-6 ">
-                                    <p>O Include é um evento feito para você que esta ingressando no curso de Ciência da Computação 
+                                    <p class="text-justify">O Include é um evento feito para você que esta ingressando no curso de Ciência da Computação 
                                         e gostaria de conhecer um pouco mais sobre o Campus e as atividades realizadas pelo seu curso.</p>
                                 </div>
                             </div>
@@ -72,7 +74,7 @@
         <section class="page-section" id="atividades">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Atividades</h2>
+                    <h2 class="section-heading">Atividades</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row text-center">
@@ -98,7 +100,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Fotos</h2>
+                    <h2 class="section-heading ">Fotos</h2>
                     <h3 class="section-subheading text-muted">Algumas lembranças</h3>
                 </div>
                 <div class="row">
@@ -151,7 +153,7 @@
         <section class="page-section" id="workshop">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">workshop</h2>
+                    <h2 class="section-heading ">workshop</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <ul class="timeline">
@@ -202,7 +204,7 @@
         <section class="page-section bg-light" id="organizadores">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">organizadores</h2>
+                    <h2 class="section-heading ">organizadores</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
