Adicionado a aba de Workshops

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#padrao">O que isso</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#atividades">Atividades</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Fotos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshop">Workshop</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizadores">Sobre o PET</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshop">Workshops</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizadores">PET</a></li>
                     </ul>
                 </div>
             </div>
@@ -148,48 +148,38 @@
         <section class="page-section" id="workshop">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">workshop</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">workshops</h2>
+                    <h3 class="section-subheading text-muted">Sabemos que muitos alunos se sentem perdidos no início do curso, por isso, preparamos esses workshops durante a semana para auxiliá-los, durante e após as suas primeiras cadeiras de programação.</h3>
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/about/python.png" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>Segunda-Feira (22/02)</h4>
+                                <h4 class="subheading">Fundamentos com Python</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Aprenda conceitos básico da programação estruturada como o que é uma variável, estruturas de condições, estruturas de laço, funções e muito mais com Python.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/about/github.png" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>Quarta-Feira (24/02)</h4>
+                                <h4 class="subheading">Git + Github</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Aprenda a versionar e compartilhar suas aplicações com a comunidade com Git e GitHub, pois irá ajudá-lo durante a realização de seus projetos pessoais e coletivos.</p></div>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/about/terminal.png" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2012</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                <h4>Sexta-Feira (26/02)</h4>
+                                <h4 class="subheading">Usando o terminal Linux</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>July 2014</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Aprenda os comandos básicos do terminal linux para otimizar seu tempo ao desenvolver aplicações sejam mobile, web, front-end ou back-end.</p></div>
                         </div>
                     </li>
                 </ul>
