--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">workshops</h2>
-                    <h3 class="section-subheading text-muted">Sabemos que muitos alunos se sentem perdidos no início do curso, por isso, preparamos esses workshops durante a semana para auxiliá-los, durante e após as suas primeiras cadeiras de programação.</h3>
+                <div class="row justify-content-center">
+                    <div class="col-md-6">
+                        <h3 class="section-subheading text-muted text-justify">Sabemos que muitos alunos se sentem perdidos no início do curso, por isso, preparamos esses workshops durante a semana para auxiliá-los,no decorrer das suas aulas de programação.</h3>
+                        </div>
+                    </div>
                 </div>
                 <ul class="timeline">
                     <li>
