alterações na imagem main e add animação

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+        <title>Include 2021</title>
+        <link rel="icon" type="image/x-icon" href="img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -14,7 +14,9 @@
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&family=Poiret+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500;800;900&family=Poiret+One&display=swap" rel="stylesheet">
+        <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"></head>
+    </body>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <style>
@@ -26,7 +28,10 @@
                 bottom:0px;
                 left:0px;
                 max-height: 600px;
-            }   
+            } 
+            #titulo {
+                font-family: 'MuseoModerno', cursive;
+            }
         </style>
     </head>
     <body id="page-top">
@@ -48,9 +53,9 @@
         <!-- Masthead-->
         <header class="masthead" style="position: relative !important;">
             <div class="container">
-                <div class="masthead-heading text-uppercase">Include</div>
-                <!--<a class="btn btn-primary btn-xl text-uppercase" data-toggle="modal" href="#programacao">horários</a>-->
-                <button type="button" class="btn btn-outline-danger btn-xl " data-toggle="modal" href="#programacao">Programação</button>
+                <div class="masthead-heading wow pulse infinite" data-wow-duration="2s"  id="titulo">Include</div>
+                <!--<div class="masthead-subheading">2021</div>-->
+                <button type="button" class="btn btn-outline-light btn-xl " data-toggle="modal" href="#programacao">Programação</button>
             </div>
             <div id="wave"></div>
         </header>
@@ -75,7 +80,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading">Atividades</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Ações criadas pelo PET afim de faze-lo se sentir acolhido pelo âmbito acadêmico.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -110,11 +115,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"></div>
                                 </div>
-                                <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="img/1.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-subheading text-muted">Alunos reunidos no include 2020</div>
                             </div>
                         </div>
                     </div>
@@ -124,11 +128,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"></div>
                                 </div>
-                                <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="img/2.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-subheading text-muted">Interação entre PETianos e calouros</div>
                             </div>
                         </div>
                     </div>
@@ -138,11 +141,51 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"></div>
                                 </div>
-                                <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="img/3.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-subheading text-muted">Gincanas</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"></div>
+                                </div>
+                                <img class="img-fluid" src="img/4.jpg" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-subheading text-muted">Calouros conhecendo o professor  Lincoln Rocha </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"></div>
+                                </div>
+                                <img class="img-fluid" src="img/5.jpg" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-subheading text-muted">Dicas com ex-alunos</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"></div>
+                                </div>
+                                <img class="img-fluid" src="img/6.jpg" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-subheading text-muted">Interação com outros calouros</div>
                             </div>
                         </div>
                     </div>
@@ -272,5 +315,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-    </body>
+        <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 </html>
