--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500;800;900&family=Poiret+One&display=swap" rel="stylesheet">
-        <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"></head>
-    </body>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <style>
@@ -29,8 +28,8 @@
                 left:0px;
                 max-height: 600px;
             } 
-            #titulo {
-                font-family: 'MuseoModerno', cursive;
+            .titulo {
+                font-family: 'MuseoModerno', cursive !important
             }
         </style>
     </head>
@@ -38,13 +37,13 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/navbar-logo.svg" alt="" /></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><!--<img src="img/navbar-logo.svg" alt="" />--></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre">sobre</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#atividades">Atividades</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Fotos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshop">Workshop</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshop">Workshops</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizadores">Organizadores</a></li>
                     </ul>
                 </div>
@@ -53,7 +52,7 @@
         <!-- Masthead-->
         <header class="masthead" style="position: relative !important;">
             <div class="container">
-                <div class="masthead-heading wow pulse infinite" data-wow-duration="2s"  id="titulo">Include</div>
+                <div class="masthead-heading titulo wow pulse infinite" data-wow-duration="2s" >Include</div>
                 <!--<div class="masthead-subheading">2021</div>-->
                 <button type="button" class="btn btn-outline-light btn-xl " data-toggle="modal" href="#programacao">Programação</button>
             </div>
@@ -63,7 +62,7 @@
         <section class="page-section" id ="sobre">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading ">Sobre</h2><br>
+                    <h2 class="section-heading titulo">Sobre</h2><br>
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-md-6 ">
@@ -79,7 +78,7 @@
         <section class="page-section" id="atividades">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading">Atividades</h2>
+                    <h2 class="section-heading titulo">Atividades</h2>
                     <h3 class="section-subheading text-muted">Ações criadas pelo PET afim de faze-lo se sentir acolhido pelo âmbito acadêmico.</h3>
                 </div>
                 <div class="row text-center">
@@ -105,7 +104,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading ">Fotos</h2>
+                    <h2 class="section-heading titulo">Fotos</h2>
                     <h3 class="section-subheading text-muted">Algumas lembranças</h3>
                 </div>
                 <div class="row">
