Adicionado uma parte do Footer

--- a/index.html
+++ b/index.html
@@ -214,12 +214,32 @@
         <footer class="footer py-4" style = " background-color: black;">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © Your Website 2020</div>
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    <div class="col-lg-5">
+                        <img class="rounded float-left" src="img/logos/PETLogo.png" alt="" />
                     </div>
-                    <div class="col-lg-4 text-lg-right"><a class="mr-3" href="#!">Privacy Policy</a><a href="#!">Terms of Use</a></div>
+                    <div class="col-lg-3 my-3 my-lg-0">
+                        <h5 class="display-4">PET COMPUTAÇÃO</h5>
+                        <address>Av. Humberto Monte, s/n UFC - Campus do Pici Centro de Ciências Bloco 910 </address>
+                        <a class="text-lg-left" href="#!">petcomp@ufc.br</a>
+                    </div>
+                    <div class="col-lg-4 text-lg-right">
+                        <a class="mr-3" href="#!">Privacy Policy</a>
+                        <a href="#!">Terms of Use</a>
+                    </div>
                 </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-4">
+                        <img class="rounded float-left" src="img/logos/UFCLogo.png" alt="" />
+                    </div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        
+                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+
             </div>
         </footer>
         <!-- Portfolio Modals--><!-- Modal 1-->
