--- a/index.html
+++ b/index.html
@@ -214,29 +214,35 @@
         <footer class="footer py-4" style = " background-color: black;">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-5">
-                        <img class="rounded float-left" src="img/logos/PETLogo.png" alt="" />
+                    <div class="col-lg-5 mb-0">
+                        <img class="rounded" style="margin-top: -20px" src="img/logos/PETLogo.png" alt="" />
                     </div>
                     <div class="col-lg-3 my-3 my-lg-0">
-                        <h5 class="display-4">PET COMPUTAÇÃO</h5>
+                        <h5 class="display-4" style="text-align: left">PET COMPUTAÇÃO</h5>
                         <address>Av. Humberto Monte, s/n UFC - Campus do Pici Centro de Ciências Bloco 910 </address>
-                        <a class="text-lg-left" href="#!">petcomp@ufc.br</a>
+                        <a class="text-lg-left float-left" href="http://www.petcomp.ufc.br/" target="_blank">petcomp@ufc.br</a>
                     </div>
-                    <div class="col-lg-4 text-lg-right">
-                        <a class="mr-3" href="#!">Privacy Policy</a>
-                        <a href="#!">Terms of Use</a>
+                    <div class="col-lg-4 mb-lg-3 my-lg-0">
+                        <h5 class="display-4 ml-5 mb-3" style="text-align: left">LINKS</h5>
+                        <div >
+                            <a class="text-lg-left" style="margin-right: 180px" href="http://www.ufc.br/" target="_blank">Portal UFC</a><br>
+                            <a class="text-lg-left" style="margin-right: 30px" href="http://portal.dc.ufc.br/" target="_blank">Departamento de Computação</a><br>
+                            <a class="text-lg-left" style="margin-right:18px" href="https://cc.ufc.br/" target="_blank">Curso de Ciência da Computação</a><br>
+                        </div>
                     </div>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-lg-4">
-                        <img class="rounded float-left" src="img/logos/UFCLogo.png" alt="" />
+                    <div class="col-lg-4 ml-5">
+                        <div style="margin-top: -20px">
+                            <img class="rounded" style="margin-bottom: 50px" src="img/logos/UFCLogo.png" alt="" />
+                            </div>
                     </div>
-                    <div class="col-lg-4 my-3 my-lg-0">
+                    <div class="col-lg-3 my-0 my-lg-0">
                         
-                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-dark btn-social mx-1" href="#!"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-dark btn-social mx-1" style="margin-bottom: 50px" href="https://www.instagram.com/petcompufc/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-1" style="margin-bottom: 50px" href="https://www.facebook.com/PETCompUFC/?ref=br_rs" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-1" style="margin-bottom: 50px" href="https://github.com/petcompufc" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-dark btn-social mx-1" style="margin-bottom: 50px" href="https://www.youtube.com/user/petcompufc" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
 
